# agner

./: .env  .gitignore  Cargo.toml  LICENSE  Makefile  rustfmt.toml
.github/workflows/: rust-cargo-clippy.yml  rust-cargo-docs.yml  rust-cargo-tarpaulin.yml  rust-cargo-test.yml  rust-clippy.yml  rust-coverage.yml  rust-docs.yml  rust.yml
crates/agner/: Cargo.toml
crates/agner-actor/: Cargo.toml
crates/agner-actor/src/: actor.rs  actor_id.rs  context.rs  error.rs  lib.rs  message.rs  oneshot.rs  seed.rs  signal.rs  start_opts.rs  system.rs  task.rs
crates/agner-actors/: Cargo.toml
crates/agner-actors/docs/: issues.md
crates/agner-actors/src/: actor.rs  actor_id.rs  actor_runner.rs  context.rs  exit.rs  exit_handler.rs  exit_reason.rs  init_ack.rs  lib.rs  spawn_opts.rs  spsc.rs  system.rs  system_config.rs
crates/agner-actors/src/actor_id/: impl_fmt.rs  serde.rs  tests.rs
crates/agner-actors/src/actor_runner/: call_msg.rs  impl_debug.rs  pipe.rs  sys_msg.rs  watches.rs
crates/agner-actors/src/exit/: into_exit.rs
crates/agner-actors/src/spsc/: tests.rs
crates/agner-actors/src/system/: actor_entry.rs  actor_id_pool.rs  errors.rs  sys_actor_entry.rs
crates/agner-actors/tests/: 01-spawn-an-actor.rs  02-system-max-actors-limit.rs  03-actor-send-messages.rs  04-actor-links-work.rs  05-waits-work.rs  common.rs  m03.erl
crates/agner-helm/: Cargo.toml
crates/agner-helm/src/: actors.rs  lib.rs  system.rs
crates/agner-helm/src/actors/: exit_reason_serde.rs
crates/agner-init-ack/: Cargo.toml
crates/agner-init-ack/src/: context_ext.rs  lib.rs
crates/agner-reg/: Cargo.toml
crates/agner-reg/src/: lib.rs  reg.rs  tests.rs
crates/agner-registered/: Cargo.toml
crates/agner-service/: Cargo.toml
crates/agner-sup/: Cargo.toml
crates/agner-sup/examples/: tcp-echo-server.rs
crates/agner-sup/src/: common.rs  dynamic.rs  dynamic_sup.rs  exit_reason_hack.rs  fixed.rs  lib.rs  mixed.rs  poc.rs  registered.rs  service.rs  static_sup.rs  uniform.rs
crates/agner-sup/src/common/: args_factory.rs  child_factory.rs  gen_child_spec.rs  init_type.rs  produce_child.rs  produce_chlid.rs  start_child.rs  start_child_error.rs  stop_child.rs  util.rs  with_registered_service.rs
crates/agner-sup/src/common/args_factory/: tests.rs
crates/agner-sup/src/common/child_factory/: registered.rs  start_child.rs  tests.rs
crates/agner-sup/src/common/child_factory/tests/: ergonomics.rs
crates/agner-sup/src/common/gen_child_spec/: args_call.rs  args_clone.rs  args_unique.rs  gen_child_spec_impl.rs  start_child.rs  tests.rs  traits.rs
crates/agner-sup/src/common/produce_child/: registered.rs  tests.rs
crates/agner-sup/src/common/produce_child/tests/: ergonomics.rs
crates/agner-sup/src/common/start_child/: registered.rs  tests.rs
crates/agner-sup/src/common/start_child/tests/: no_init_ack.rs  with_init_ack_direct.rs  with_init_ack_indirect.rs
crates/agner-sup/src/dynamic_sup/: dyn_sup_seed.rs  error.rs  request.rs  seed_factory.rs  tests.rs
crates/agner-sup/src/fixed/: behaviour.rs  child_spec.rs  hlist.rs  restart_strategy.rs  sup_spec.rs
crates/agner-sup/src/fixed/hlist/: index.rs  index_.rs  operation.rs  push.rs
crates/agner-sup/src/fixed/restart_strategy/: all_for_one.rs  one_for_one.rs
crates/agner-sup/src/fixed/sup_spec/: start.rs  stop.rs
crates/agner-sup/src/mixed/: child_id.rs  child_spec.rs  restart_intensity.rs  restart_strategy.rs  sup_spec.rs  supervisor.rs
crates/agner-sup/src/mixed/child_spec/: flat_mixed_child_spec.rs
crates/agner-sup/src/mixed/restart_strategy/: common_decider.rs  strategies.rs  tests.rs
crates/agner-sup/src/mixed/restart_strategy/tests/: basic.rs
crates/agner-sup/src/static_sup/: api.rs  child_cell.rs  child_spec.rs  child_state.rs  error.rs  hlist.rs  messages.rs  restart_strategy.rs  tests.rs
crates/agner-sup/src/static_sup/child_cell/: create.rs  start.rs
crates/agner-sup/src/static_sup/hlist/: as_mut.rs  as_ref.rs  fold.rs  len.rs  map.rs  push_back.rs
crates/agner-sup/src/static_sup/restart_strategy/: give_up.rs  one_for_one.rs
crates/agner-sup/src/uniform/: child_spec.rs
crates/agner-sup/tests/: 01-dynamic-sup-basic.rs  common.rs
crates/agner-sys1/: Cargo.toml
crates/agner-sys1/src/: actor_entry.rs  actor_runner.rs  error.rs  lib.rs  sys_msg.rs  system.rs  tests.rs
crates/agner-sys1/src/actor_runner/: context.rs  error.rs  internals.rs
crates/agner-sys1/src/system/: all_actors.rs  config.rs  entry_cleanup_guard.rs  fmt_debug.rs
crates/agner-sys1/src/tests/: dummy.rs  sup.rs  wrk.rs
crates/agner-sys1/tests/: actor-with-tasks.rs  echo-actor.rs  ring-actor.rs
crates/agner-test-actor/: Cargo.toml
crates/agner-test-actor/src/: api.rs  behaviour.rs  exited.rs  lib.rs  query.rs  registry.rs  tests.rs
crates/agner-utils/: Cargo.toml
crates/agner-utils/src/: async_yield.rs  future_timeout_ext.rs  lib.rs  result_err_flatten.rs  spsc.rs  std_error_pp.rs
crates/agner-utils/src/spsc/: tests.rs
crates/agner/examples/: 01-actors-ping-pong.rs  02-supervision-demo.rs  common.rs
crates/agner/src/: lib.rs
crates/agner/tests/: 01-ergonomics.rs  02-actor-exit.rs  03-actor-links.rs  04-sup-mixed.rs  05-registered-service.rs  common.rs
docs/: issues.md
examples/benches/: Cargo.toml
examples/benches/src/: b01_1_futures_mpsc.rs  b01_2_tokio_mpsc.rs  b02_1_static_dispatch.rs  b02_2_dynamic_dispatch.rs  b03_1_async_trait.rs  b03_2_type_alias_impl_trait.rs  b03_3_boxed.rs  lib.rs
examples/multi-user-chat/: Cargo.toml
examples/multi-user-chat/src/: main.rs
examples/playground/: Cargo.toml
examples/playground/src/: lib.rs
examples/sample-actors/: Cargo.toml
examples/sample-actors/src/: actor_with_tasks.rs  lib.rs  (+2 more)
examples/tcp-echo-server/: Cargo.toml
examples/tutorials/: Cargo.toml
examples/tutorials/examples/: 01-ping-pong.rs
tests/test-scenarios/: Cargo.toml
tests/test-scenarios-run/: Cargo.toml
tests/test-scenarios-run/src/: lib.rs  util.rs
tests/test-scenarios/src/: common.rs  lib.rs  sc01_basic.rs  sc02_a_tree.rs
tests/test-scenarios/src/common/: basic.rs  tree.rs
(+1 files in other folders)
