[workspace]
members = [
    "crates/*",
]

[workspace.dependencies]
agner = {path = "crates/agner", version = "=0.4.0" }
agner-actors = {path = "crates/agner-actors", version = "=0.4.0" }
agner-helm = {path = "crates/agner-helm", version = "=0.4.0" }
agner-init-ack = {path = "crates/agner-init-ack", version = "=0.4.0" }
agner-reg = {path = "crates/agner-reg", version = "=0.4.0" }
agner-sup = {path = "crates/agner-sup", version = "=0.4.0" }
agner-test-actor = {path = "crates/agner-test-actor", version = "=0.4.0" }
agner-utils = {path = "crates/agner-utils", version = "=0.4.0" }

arc-swap = "^1"
axum = "^0.6"
futures = "^0.3"
tracing = { version = "^0.1" }
names = { version = "0.14.0", default-features = false }
pin-project = "^1"
rand = "^0.8"
serde = "^1"
serde_json = "^1"
tempfile = "^3"
thiserror = "^1"
tokio = "^1"
