[package]
name = "agner-actors"
version = "0.2.2"
edition = "2021"

authors = ["Raman Hafiyatulin <r.gafiyatullin@me.com>"]
license = "MIT"
repository = "https://github.com/RGafiyatullin/agner"
description = "An actor toolkit inspired by Erlang/OTP (actors)"

[dependencies]
futures = { version = "^0.3", features = ["bilock", "unstable"]}
log = "0.4"
pin-project = "^1"
thiserror = "^1"
tokio = {version = "^1", features = ["sync", "macros", "rt"]}

[dev-dependencies]
dotenv = "^0.15"
pretty_env_logger = "^0.4"
tokio = {version = "^1", features = ["macros", "rt-multi-thread", "sync", "time"]}
