[package]
name = "agner-actors"
version = "0.3.0"
edition = "2021"

authors = ["Raman Hafiyatulin <r.gafiyatullin@me.com>"]
license = "MIT"
repository = "https://github.com/RGafiyatullin/agner"
description = "An actor toolkit inspired by Erlang/OTP (actors)"

[features]
default = []
serde = ["dep:serde"]

[dependencies]
agner-utils = { version = "=0.3.0", path = "../agner-utils" }

futures = { version = "^0.3"}
log = "0.4"
pin-project = "^1"
serde = { version = "^1", features = ["derive"], optional = true }
thiserror = "^1"
tokio = {version = "^1", features = ["sync", "macros", "rt"]}

[dev-dependencies]
dotenv = "^0.15"
pretty_env_logger = "^0.4"
tokio = {version = "^1", features = ["macros", "rt-multi-thread", "sync", "time"]}
