[package]
name = "agner-actors"
version = "0.3.13"
edition = "2021"

authors = ["Raman Hafiyatulin <r.gafiyatullin@me.com>"]
license = "MIT"
repository = "https://github.com/agner-rs/agner"
description = "An actor toolkit inspired by Erlang/OTP (actors)"

[features]
default = []
serde = ["dep:serde"]

[dependencies]
agner-utils = { workspace = true }

futures = { workspace = true }
tracing = { workspace = true }
pin-project = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "macros", "rt"]}

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"]}
