[package]
name = "agner-helm"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

authors = ["Raman Hafiyatulin <r.gafiyatullin@me.com>"]
license = "MIT"
repository = "https://github.com/RGafiyatullin/agner"
description = "An actor toolkit inspired by Erlang/OTP (control panel)"

[dependencies]
agner-utils = { path = "../agner-utils", version = "=0.3.1" }
agner-actors = { path = "../agner-actors", version = "=0.3.1", features = ["serde"] }
axum = "^0.5"
futures = "^0.3"
serde = { version = "^1", features = ["derive"] }
thiserror = "^1"