[package]
name = "agner-helm"
version = "0.3.14"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

authors = ["Raman Hafiyatulin <r.gafiyatullin@me.com>"]
license = "MIT"
repository = "https://github.com/agner-rs/agner"
description = "An actor toolkit inspired by Erlang/OTP (control panel)"

[dependencies]
agner-utils = { workspace = true }
agner-actors = { workspace = true, features = ["serde"] }
agner-sup = { workspace = true }

axum = { workspace = true }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }