[package]
name = "agner-init-ack"
version = "0.3.8"
edition = "2021"

authors = ["Raman Hafiyatulin <r.gafiyatullin@me.com>"]
license = "MIT"
repository = "https://github.com/agner-rs/agner"
description = "An actor toolkit inspired by Erlang/OTP (init-ack)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agner-utils = { path = "../agner-utils", version = "=0.3.8" }
agner-actors = { path = "../agner-actors", version = "=0.3.8" }

futures = "^0.3"
pin-project = "^1"
tokio = {version = "^1", features = ["sync"]}