[package]
name = "agner-init-ack"
version = "0.4.1"
edition = "2021"

authors = ["Raman Hafiyatulin <r.gafiyatullin@me.com>"]
license = "MIT"
repository = "https://github.com/agner-rs/agner"
description = "An actor toolkit inspired by Erlang/OTP (init-ack)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agner-utils = { workspace = true }
agner-actors = { workspace = true }

futures = { workspace = true }
pin-project = { workspace = true }
tokio = { workspace = true, features = ["sync"]}
