[package]
name = "agner-reg"
version = "0.3.10"
edition = "2021"

authors = ["Raman Hafiyatulin <r.gafiyatullin@me.com>"]
license = "MIT"
repository = "https://github.com/agner-rs/agner"
description = "An actor toolkit inspired by Erlang/OTP (reg)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agner-actors = { path = "../agner-actors", version = "=0.3.10" }

arc-swap = { version = "^1", features = ["weak"] }
tokio = { version = "^1", features = ["sync"] }