[package]
name = "agner-sup"
version = "0.3.9"
edition = "2021"

authors = ["Raman Hafiyatulin <r.gafiyatullin@me.com>"]
license = "MIT"
repository = "https://github.com/agner-rs/agner"
description = "An actor toolkit inspired by Erlang/OTP (supervisors)"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
# default = ["reg"]

reg = ["dep:agner-reg"]


[dependencies]
agner-utils = { path = "../agner-utils", version = "=0.3.9" }
agner-actors = { path = "../agner-actors", version = "=0.3.9" }
agner-init-ack = { path = "../agner-init-ack", version = "=0.3.9" }
agner-reg = { path = "../agner-reg", version = "=0.3.9", optional = true }

futures = "^0.3"
log = "^0.4"
pin-project = "^1"
thiserror = "^1"
tokio = {version = "^1", features = ["sync", "time"]}

[dev-dependencies]
agner-test-actor = { path = "../agner-test-actor", version = "=0.3.9" }
dotenv = "^0.15"
pretty_env_logger = "^0.4"
tokio = {version = "^1", features = ["macros", "rt-multi-thread", "sync", "time", "net"]}
