[package]
name = "agner-sup"
version = "0.3.13"
edition = "2021"

authors = ["Raman Hafiyatulin <r.gafiyatullin@me.com>"]
license = "MIT"
repository = "https://github.com/agner-rs/agner"
description = "An actor toolkit inspired by Erlang/OTP (supervisors)"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
# default = ["reg"]

reg = ["dep:agner-reg"]


[dependencies]
agner-utils = { workspace = true }
agner-actors = { workspace = true }
agner-init-ack = { workspace = true }
agner-reg = { workspace = true, optional = true }

futures = { workspace = true }
tracing = { workspace = true }
pin-project = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"]}

[dev-dependencies]
agner-test-actor = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time", "net"]}
