[package]
name = "agner-sys1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agner-actor = { path = "../agner-actor", version = "=0.1.0" }

async-trait = "^0.1"
futures = "^0.3"
log = "^0.4"
pin-project = "^1"
thiserror = {version = "^1"}
tokio = {version = "^1", features = ["sync", "time"]}

[dev-dependencies]
sample-actors = { path = "../../examples/sample-actors" }

pretty_env_logger = "^0.4"
tokio = {version = "^1", features = ["macros", "time", "rt-multi-thread"]}