[package]
name = "agner-test-actor"
version = "0.2.10"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agner-actors = { path = "../agner-actors", version = "=0.2.10" }
agner-utils = { path = "../agner-utils", version = "=0.2.10" }
async-trait = "^0.1"
futures = "^0.3"
log = "^0.4"
tokio = { version = "^1", features = ["sync", "rt-multi-thread", "macros"] }