[package]
name = "agner-test-actor"
version = "0.3.4"
edition = "2021"

authors = ["Raman Hafiyatulin <r.gafiyatullin@me.com>"]
license = "MIT"
repository = "https://github.com/agner-rs/agner"
description = "An actor toolkit inspired by Erlang/OTP (test-actor)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agner-actors = { path = "../agner-actors", version = "=0.3.4" }
agner-utils = { path = "../agner-utils", version = "=0.3.4" }
async-trait = "^0.1"
futures = "^0.3"
log = "^0.4"
tokio = { version = "^1", features = ["sync", "rt-multi-thread", "macros"] }