[package]
name = "agner-utils"
version = "0.3.9"
edition = "2021"

authors = ["Raman Hafiyatulin <r.gafiyatullin@me.com>"]
license = "MIT"
repository = "https://github.com/agner-rs/agner"
description = "An actor toolkit inspired by Erlang/OTP (utils)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "^0.3", features = ["bilock", "unstable"]}
pin-project = { version = "^1" }
tokio = {version = "^1", features = ["time"]}

[dev-dependencies]
tokio = {version = "^1", features = ["macros", "rt-multi-thread", "time"]}