[package]
name = "agner-utils"
version = "0.3.16"
edition = "2021"

authors = ["Raman Hafiyatulin <r.gafiyatullin@me.com>"]
license = "MIT"
repository = "https://github.com/agner-rs/agner"
description = "An actor toolkit inspired by Erlang/OTP (utils)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { workspace = true, features = ["bilock", "unstable"]}
pin-project = { workspace = true }
tokio = { workspace = true, features = ["time"]}

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"]}
