[package]
name = "agner"
version = "0.3.8"
edition = "2021"

authors = ["Raman Hafiyatulin <r.gafiyatullin@me.com>"]
license = "MIT"
repository = "https://github.com/agner-rs/agner"
description = "An actor toolkit inspired by Erlang/OTP"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["init-ack", "sup"]
# default = ["full"]

full = ["init-ack", "sup", "helm", "test-actor"]

serde = ["agner-actors/serde"]

# Components
init-ack = ["dep:agner-init-ack"]
sup = ["dep:agner-sup"]
helm = ["dep:agner-helm"]
test-actor = ["dep:agner-test-actor"]

[dependencies]
agner-utils = { path = "../agner-utils", version = "=0.3.8" }
agner-actors = { path = "../agner-actors", version = "=0.3.8" }
agner-init-ack = { path = "../agner-init-ack", version = "=0.3.8", optional = true }
agner-sup = { path = "../agner-sup", version = "=0.3.8", optional = true }
agner-helm = { path = "../agner-helm", version = "0.3.8", optional = true }
agner-test-actor = { path = "../agner-test-actor", version = "0.3.8", optional = true }

[dev-dependencies]
dotenv = "^0.15"
futures = "^0.3"
log = "^0.4"
pretty_env_logger = "^0.4"
thiserror = "^1"
tokio = {version = "^1", features = ["full"]}


[package.metadata.docs.rs]
all-features = true