[package]
name = "agner"
version = "0.3.14"
edition = "2021"

authors = ["Raman Hafiyatulin <r.gafiyatullin@me.com>"]
license = "MIT"
repository = "https://github.com/agner-rs/agner"
description = "An actor toolkit inspired by Erlang/OTP"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["init-ack", "reg", "sup"]
# default = ["full"]

full = ["init-ack", "reg", "sup", "helm", "test-actor"]

serde = ["agner-actors/serde"]

# Components
init-ack = ["dep:agner-init-ack"]
reg = ["dep:agner-reg", "agner-sup?/reg"]
sup = ["dep:agner-sup"]
helm = ["dep:agner-helm"]
test-actor = ["dep:agner-test-actor"]

[dependencies]
agner-utils = { workspace = true }
agner-actors = { workspace = true }
agner-init-ack = { workspace = true, optional = true }
agner-reg = { workspace = true, optional = true }
agner-sup = { workspace = true, optional = true }
agner-helm = { workspace = true, optional = true }
agner-test-actor = { workspace = true, optional = true }

[dev-dependencies]
futures = {workspace = true}
tracing = {workspace = true}
names = {workspace = true}
rand = {workspace = true}
tempfile = {workspace = true}
thiserror = {workspace = true}
tokio = {workspace = true, features = ["full"]}


[package.metadata.docs.rs]
all-features = true