[package]
name = "multi-user-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agner-actors = {path = "../../crates/agner-actors", version = "^0.2"}
agner-sup = {path = "../../crates/agner-sup", version = "^0.2"}
dotenv = "^0.15"
log = "^0.4"
pretty_env_logger = "^0.4"
tokio = {version = "^1", features = ["full"]}