[package]
name = "playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agner-actors = { path = "../../crates/agner-actors", version = "^0.2", features = []}
dotenv = "^0.15"
futures = "^0.3"
log = "^0.4"
pretty_env_logger = "^0.4"
tokio = { version = "^1", features = ["macros", "rt-multi-thread", "time"] }