[package]
name = "tutorials"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agner = { path = "../../crates/agner", version = "^0.2" }
# agner = "0.2"
futures = "^0.3"
dotenv = "^0.15"
log = "^0.4"
pretty_env_logger = "^0.4"
tokio = {version = "^1", features = ["full"]}