[package]
name = "test-scenarios-run"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
test-scenarios = { path = "../test-scenarios" }
agner-actor = { path = "../../crates/agner-actor" }
agner-sys1 = { path = "../../crates/agner-sys1" }

log = "^0.4"
pretty_env_logger = "^0.4"
tokio = {version = "^1", features = ["macros", "rt-multi-thread"]}