[package]
name = "test-scenarios"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agner-actor = { path = "../../crates/agner-actor" }

async-trait = "^0.1"
futures = "^0.3"
log = "^0.4"
rand = "^0.8"
thiserror = "^1"
tokio = { version = "^1", features = ["time"] }